tests/e2e/semantics/function_arg_not_accepted.story
function foo a:int
    x = 0

foo(a:2 b:2)
